# pyPgBoundary

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIB.md  ChangeLog.fr.md  ChangeLog.md  README.fr.md  README.md  pgboundary.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: autofix.yml  ci.yml  release.yml
docs/: DEVELOPMENT.fr.md  DEVELOPMENT.md  INSTALL.fr.md  INSTALL.md
src/pgboundary/: __init__.py  cli.py  cli_catalog.py  cli_completion.py  cli_config.py  cli_load.py  cli_widgets.py  config.py  exceptions.py  geometry_compare.py  historization.py  import_config.py  schema_config.py
src/pgboundary/db/: __init__.py  connection.py  models.py
src/pgboundary/loaders/: __init__.py  admin_express.py  base.py  codes_postaux.py  product_loader.py
src/pgboundary/products/: __init__.py  admin_express.py  catalog.py  catalog_db.py  codes_postaux.py  other.py
src/pgboundary/sources/: __init__.py  atom.py  base.py  explorer.py  ign.py  loader.py
src/pgboundary/sources/address/FR/: ban_plus.yml  codes_postaux_ban.yml  codes_postaux_generated.yml  codes_postaux_geoclip.yml  codes_postaux_laposte.yml
src/pgboundary/sources/administrative/FR/: admin_express.yml  admin_express_cog.yml  admin_express_cog_carto.yml  admin_express_cog_carto_pe.yml  admin_express_cog_cartoplus.yml
src/pgboundary/sources/cartography/FR/: bdcarto.yml
src/pgboundary/sources/electoral/FR/: bureaux_de_vote.yml  circonscriptions_legislatives.yml
src/pgboundary/sources/landcover/FR/: masque_foret.yml
src/pgboundary/sources/statistical/FR/: contours_iris.yml
src/pgboundary/sources/territories/: FR.yml
src/pgboundary/types/: __init__.py  boundaries.py
tests/: __init__.py  conftest.py  test_cli.py  test_cli_catalog.py  test_cli_completion.py  test_cli_config.py  test_cli_load.py  test_cli_widgets.py  test_codes_postaux.py  test_config.py  test_db_connection.py  test_geometry_compare.py  test_historization.py  test_import_config.py  test_integration.py  test_loaders.py  test_product_loader.py  test_products.py  test_types.py
