[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pgboundary"
version = "0.1.0"
description = "Module Python pour charger les limites administratives françaises dans PostgreSQL/PostGIS"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.11"
authors = [
    { name = "Eric", email = "eric@example.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: GIS",
    "Typing :: Typed",
]
keywords = ["gis", "postgresql", "postgis", "france", "boundaries", "admin-express", "ign"]

dependencies = [
    "geopandas>=1.0.0",
    "shapely>=2.0.0",
    "psycopg[binary]>=3.1.0",
    "psycopg2-binary>=2.9.0",
    "sqlalchemy>=2.0.0",
    "geoalchemy2>=0.15.0",
    "httpx>=0.27.0",
    "typer>=0.12.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "rich>=13.0.0",
    "pyproj>=3.6.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "types-PyYAML>=6.0.0",
]

[project.scripts]
pgboundary = "pgboundary.cli:app"

[project.urls]
Homepage = "https://github.com/eric/pgboundary"
Repository = "https://github.com/eric/pgboundary"
Issues = "https://github.com/eric/pgboundary/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/pgboundary"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["pgboundary"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "geopandas.*",
    "shapely.*",
    "geoalchemy2.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --cov=pgboundary --cov-report=term-missing"

[tool.coverage.run]
source = ["src/pgboundary"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
